codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: tui/src/pager_overlay.rs
expression: snapshot
---
 Transcript · 0 prompts · 0% ───────────────────────────────────────────────────
• Added foo.txt (+2 -0)
    1 +hello
    2 +world

• Added foo.txt (+2 -0)
    1 +hello
    2 +world
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ scroll   ←/→ prompts   pgup/pgdn page   home/end jump
 q quit   ctrl + o copy   ⌥ + r raw   esc/← prev   / search
