codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_renders_live_tail.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
" Transcript · 0 prompts · 100% ─────────"
"alpha                                   "
"                                        "
"tail                                    "
"~                                       "
"~                                       "
"────────────────────────────────────────"
" ↑/↓   ←/→   pgup/pgdn   home/end       "
" q   ctrl + o   ⌥ + r   esc/←   /       "
"                                        "
