codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
" Transcript · 0 prompts · 100% ─────────"
"alpha                                   "
"                                        "
"beta                                    "
"                                        "
"gamma                                   "
"────────────────────────────────────────"
" ↑/↓   ←/→   pgup/pgdn   home/end       "
" q   ctrl + o   ⌥ + r   esc/←   /       "
"                                        "
